# replayer-fe

./: .gitignore  Cargo.toml  README.md  codama.json  package.json  pnpm-lock.yaml
config/: config.toml
idl/: replayer.json
src/: app.rs  constants.rs  error.rs  lib.rs  main.rs
src/app/: component.rs  context.rs  mod.rs  shell.rs
src/components/: admin_route.rs  developer_gate.rs  footer.rs  game_card.rs  game_upload.rs  mod.rs  nav.rs  play_screen.rs  wallet_button.rs
src/config/: mod.rs  ssr_config.rs
src/models/: encryptor.rs  mod.rs
src/pages/: admin.rs  buy_game.rs  home.rs  how_it_works.rs  mod.rs  play_game.rs  publish_game.rs
src/server/: add_admin.rs  get_latest_blockhash.rs  mod.rs
src/server/api/: encrypt.rs  game.rs  keys.rs  mod.rs
src/server/api/request/: create_game_request.rs  get_key_request.rs  mod.rs
src/server/api/response/: create_game_response.rs  get_key_response.rs  mod.rs
src/server/nft/: mod.rs  upload_metadata.rs
src/server/query/: admin_query.rs  developer_query.rs  games_query.rs  mod.rs
src/server/transaction_builder/: add_admin.rs  allocate_game_account.rs  blacklist_account.rs  buy_game.rs  create_developer.rs  finalize_game_upload.rs  get_latest_blockhash.rs  init_global_config.rs  mod.rs  remove_admin.rs  upload_game_chunk.rs  withdraw_developer_fee.rs  withdraw_platform_fee.rs
src/solana/: client.rs
src/utils/: constants.rs  deserializer.rs  mod.rs
src/vm/: core.rs  emulator.rs  mod.rs
src/wallet/: bindings.rs  connection.rs  mod.rs  send_transaction.rs  sign_message.rs  solana.rs  utils.rs
style/: _base.scss  _variables.scss  main.scss
style/components/: _footer.scss  _nav.scss
style/pages/: _admin.scss  _buy.scss  _home.scss  _how_it_works.scss  _play.scss  _publish.scss
