[package]
name = "replayer-fe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
js-sys = { version = "=0.3.77", optional = true }
web-sys = { version = "=0.3.77", features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Window",
    "Crypto",
    "SubtleCrypto",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
], optional = true }
wasm-bindgen-futures = "=0.4.50"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
solana-keypair = { version = "3.1.2", optional = true }
borsh = { version = "1.6.0", features = ["derive"] }
solana-instruction = { version = "3.2.0", features = ["serde"] }
solana-pubkey = { version = "4.1.0", features = ["borsh", "curve25519"] }
solana-account-info = "3.1.0"
solana-program-error = "3.0.0"
solana-cpi = "3.1.0"
num-derive = "0.4.2"
thiserror = "2.0.18"
num-traits = "0.2.19"
solana-transaction = { version = "4.0.0", features = ["serde"] }
bincode = "1"
bs58 = "0.5.1"
solana-hash = "4.2.0"
solana-client = { version = "3.1.9", optional = true }
serde-wasm-bindgen = "0.6.5"
thaw = { version = "0.5.0-beta" } #Library Bug: This hits recursion limit, in order to fix add #![recursion_limit = "256"] in thaw/src/lib.rs
solana-account = "3.1.0"
serde_with = "3.17.0"
leptos-use = { version = "0.17.0", features = ["storage"] }
bundlr-sdk = { version = "0.5.0", optional = true }
serde_json = "1"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
aes-gcm = "0.10.3"
base64 = "0.22.1"
getrandom = { version = "0.2", features = ["js"] }
glitterbomb = { version = "0.1.2", optional = true }

[features]
hydrate = [
    "serde",
    "leptos/hydrate",
    "thaw/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:glitterbomb",
]
ssr = [
    "fetch",
    "serde",
    "thaw/ssr",
    "dep:axum",
    "dep:bundlr-sdk",
    "dep:reqwest",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "dep:solana-keypair",
    "dep:solana-client",
]
serde = []
fetch = []
anchor = []
anchor-idl-build = []
# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
#output-name = "replayer-fe"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
#site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
